Added css for small screen

--- a/atcoder-problems-frontend/src/index.css
+++ b/atcoder-problems-frontend/src/index.css
@@ -12,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+@media only screen and (max-width: 1024px){
+  .react-bs-table table td,
+  .react-bs-table table th {
+    white-space: unset;
+    word-break: break-word;
+  }
+}
