--- a/atcoder-problems-frontend/src/index.css
+++ b/atcoder-problems-frontend/src/index.css
@@ -1,20 +1,23 @@
 body {
   margin: 0;
   padding: 70px 20px 20px 20px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
+.nav-tabs .nav-link {
+  cursor: pointer;
+}
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1024px) {
   .react-bs-table table td,
   .react-bs-table table th {
     white-space: unset;
@@ -33,19 +36,19 @@ span.difficulty-circle {
 }
 
 .difficulty-red {
-  color: #FF0000;
+  color: #ff0000;
 }
 .difficulty-orange {
-  color: #FF8000;
+  color: #ff8000;
 }
 .difficulty-yellow {
-  color: #C0C000;
+  color: #c0c000;
 }
 .difficulty-blue {
-  color: #0000FF;
+  color: #0000ff;
 }
 .difficulty-cyan {
-  color: #00C0C0;
+  color: #00c0c0;
 }
 .difficulty-green {
   color: #008000;
@@ -61,30 +64,43 @@ span.difficulty-circle {
   position: relative;
 }
 
-
-.table-success-intime, .table-success-intime>td, .table-success-intime>th,
-.table-success-language, .table-success-language>td, .table-success-language>th {
-  background-color: #9AD59E;
+.table-success-intime,
+.table-success-intime > td,
+.table-success-intime > th,
+.table-success-language,
+.table-success-language > td,
+.table-success-language > th {
+  background-color: #9ad59e;
 }
 
-.table-warning-intime, .table-warning-intime>td, .table-warning-intime>th {
-  background-color: #FFDD99;
+.table-warning-intime,
+.table-warning-intime > td,
+.table-warning-intime > th {
+  background-color: #ffdd99;
 }
 
-.table-success-before-contest, .table-success-before-contest>td, .table-success-before-contest>th {
-  background-color: #99CCFF;
+.table-success-before-contest,
+.table-success-before-contest > td,
+.table-success-before-contest > th {
+  background-color: #99ccff;
 }
 
-.table-hover .table-success-intime:hover, .table-hover .table-success-intime:hover>td, .table-hover .table-success-intime:hover>th {
-  background-color: #88CC88;
+.table-hover .table-success-intime:hover,
+.table-hover .table-success-intime:hover > td,
+.table-hover .table-success-intime:hover > th {
+  background-color: #88cc88;
 }
 
-.table-hover .table-warning-intime:hover, .table-hover .table-warning-intime:hover>td, .table-hover .table-warning-intime:hover>th {
-  background-color: #F0CC99;
+.table-hover .table-warning-intime:hover,
+.table-hover .table-warning-intime:hover > td,
+.table-hover .table-warning-intime:hover > th {
+  background-color: #f0cc99;
 }
 
-.table-hover .table-success-before-contest:hover, .table-hover .table-success-before-contest:hover>td, .table-hover .table-success-before-contest:hover>th {
-  background-color: #88BBFF;
+.table-hover .table-success-before-contest:hover,
+.table-hover .table-success-before-contest:hover > td,
+.table-hover .table-success-before-contest:hover > th {
+  background-color: #88bbff;
 }
 
 .table-problem-timespan {
@@ -95,10 +111,11 @@ span.difficulty-circle {
   font-size: x-small;
 }
 
-.list-table tbody tr td, .list-table thead th {
+.list-table tbody tr td,
+.list-table thead th {
   font-size: small;
   padding: 0.3rem;
-  line-height: 1.0;
+  line-height: 1;
   white-space: normal;
 }
 
@@ -109,45 +126,46 @@ span.difficulty-circle {
   .contest-table-responsive th,
   .contest-table-responsive td,
   .contest-table-responsive tr {
-      display: block;
+    display: block;
   }
 
   .contest-table-responsive td.table-problem-empty {
-      display: none;
+    display: none;
   }
 
   .contest-table-responsive thead tr {
-      display: none;
+    display: none;
   }
 
   .contest-table-responsive tr {
-      border: 1px solid #ccc;
+    border: 1px solid #ccc;
   }
 
   .contest-table-responsive td {
-      position: relative;
-      padding-left: .75rem;
-      padding-top: 6px;
-      padding-bottom: 6px;
+    position: relative;
+    padding-left: 0.75rem;
+    padding-top: 6px;
+    padding-bottom: 6px;
   }
 
-  .contest-table-responsive.contest-regular-table-responsive td:not(:first-child) {
-      padding-left: 2.5rem;
+  .contest-table-responsive.contest-regular-table-responsive
+    td:not(:first-child) {
+    padding-left: 2.5rem;
   }
-  
+
   div.btn-group.table-tab {
-      display: block;
+    display: block;
   }
 
   div.btn-group.table-tab > button.btn:not(:last-child):not(.dropdown-toggle),
   div.btn-group.table-tab > button.btn:not(:first-child) {
-      border-radius: .25rem;
-      margin-left: 0.1rem;
+    border-radius: 0.25rem;
+    margin-left: 0.1rem;
   }
 
   div.btn-group.table-tab > button.btn {
-      margin: 0.1rem;
-      padding: 0.4rem;
+    margin: 0.1rem;
+    padding: 0.4rem;
   }
 }
 
@@ -158,24 +176,24 @@ span.difficulty-circle {
   .list-table th,
   .list-table td,
   .list-table tr {
-      display: block;
+    display: block;
   }
 
   .list-table thead tr {
-      display: none;
+    display: none;
   }
 
   .list-table tbody tr {
-      border: 1px solid #ccc;
-      margin-top: 0.5rem;
+    border: 1px solid #ccc;
+    margin-top: 0.5rem;
   }
 
   .list-table tbody tr td {
-      position: relative;
-      padding-left: 32%;
-      padding-top: 6px;
-      padding-bottom: 6px;
-      min-height: calc(1rem + 12px);
+    position: relative;
+    padding-left: 32%;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    min-height: calc(1rem + 12px);
   }
 
   .list-table tbody td:before {
@@ -197,7 +215,7 @@ span.difficulty-circle {
     border: none;
   }
 
-  .react-bs-table .table-bordered>tbody>tr>td:first-child {
+  .react-bs-table .table-bordered > tbody > tr > td:first-child {
     border-left-width: 1px;
   }
 }
