fix(frontend): set the max height of dropdowns

--- a/atcoder-problems-frontend/src/index.css
+++ b/atcoder-problems-frontend/src/index.css
@@ -12,6 +12,11 @@ code {
     monospace;
 }
 
+.dropdown-menu {
+  max-height: 256px;
+  overflow-y: auto;
+}
+
 .tooltip {
   pointer-events: none;
 }
