Add tooltip to describe unavailability of difficulty #350

--- a/atcoder-problems-frontend/src/index.css
+++ b/atcoder-problems-frontend/src/index.css
@@ -33,6 +33,11 @@ code {
   }
 }
 
+.difficulty-unavailable-circle.badge {
+  margin-right: 5px;
+  font-size: 5px;
+}
+
 span.difficulty-circle {
   display: inline-block;
   border-radius: 50%;
