--- a/atcoder-problems-frontend/src/style/_theme-dark.scss
+++ b/atcoder-problems-frontend/src/style/_theme-dark.scss
@@ -1,183 +1,210 @@
-// Modified from Superhero 4.5.0, Bootswatch
+// Cyborg 4.5.0
+// Bootswatch
 
 //
 // Color system
 //
 
-// $white:    #ffffff !default;
-// $gray-100: #ebebeb !default;
-// $gray-700: #4e4e4e !default;
-// $gray-300: #dee2e6 !default;
-// $gray-400: #ced4da !default;
-// $gray-500: #adb5bd !default;
-// $gray-600: #868e96 !default;
-// $gray-700: #495057 !default;
-// $gray-800: #343a40 !default;
-// $gray-900: #212529 !default;
-// $black:    #000000 !default;
-
-$white:    #fff !default;
+$white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
+$gray-400: #adafae !default;
+$gray-500: #888 !default;
+$gray-600: #555 !default;
+$gray-700: #282828 !default;
+$gray-800: #222 !default;
 $gray-900: #212529 !default;
-$black:    #000 !default;
+$black: #000 !default;
 
-$blue:    #dd681a !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #d9534f !default;
-$orange:  #f0ad4e !default;
-$yellow:  #f0ad4e !default;
-$green:   #5cb85c !default;
-$teal:    #20c997 !default;
-$cyan:    #5bc0de !default;
+$blue: #2a9fd6 !default;
+$indigo: #6610f2 !default;
+$purple: #6f42c1 !default;
+$pink: #e83e8c !default;
+$red: #cc0000 !default;
+$orange: #fd7e14 !default;
+$yellow: #ff8800 !default;
+$green: #77b300 !default;
+$teal: #20c997 !default;
+$cyan: #9933cc !default;
 
-$primary:       $blue !default;
-$secondary:     $gray-700 !default;
-$success:       $green !default;
-$info:          $cyan !default;
-$warning:       $yellow !default;
-$danger:        $red !default;
-$light:         lighten($gray-900, 25%) !default;
-$dark:          $gray-900 !default;
+$primary: $blue !default;
+$secondary: $gray-600 !default;
+$success: $green !default;
+$info: $cyan !default;
+$warning: $yellow !default;
+$danger: $red !default;
+$light: $gray-800 !default;
+$dark: $gray-400 !default;
 
-$yiq-contrasted-threshold:  185 !default;
+$yiq-contrasted-threshold: 175 !default;
 
 // Body
 
-$body-bg:                   #2B2B2B !default;
-$body-color:                $gray-100 !default;
-
-// Components
-
-// $border-radius:               0px !default;
-// $border-radius-lg:            0px !default;
-// $border-radius-sm:            0px !default;
+$body-bg: #121212 !default;
+$body-color: $gray-400 !default;
 
 // Fonts
-$font-family-sans-serif:      "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
-$text-muted:                  rgba(255,255,255,.4) !default;
+// $font-family-sans-serif: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI",
+//   Roboto, "Helvetica Neue", Arial, sans-serif !default;
+
+// $font-size-base: 0.875rem !default;
+
+// $h1-font-size: 4rem !default;
+// $h2-font-size: 3rem !default;
+// $h3-font-size: 2.5rem !default;
+// $h4-font-size: 2rem !default;
+// $h5-font-size: 1.5rem !default;
+
+$headings-color: $white !default;
 
 // Tables
 
-$table-accent-bg:             rgba($white,.05) !default;
-$table-hover-bg:              rgba($white,.075) !default;
+$table-color: $white !default;
+$table-accent-bg: rgba($white, 0.05) !default;
+$table-hover-bg: rgba($white, 0.075) !default;
 
-$table-border-color:          $gray-700 !default;
+$table-border-color: $gray-700 !default;
 
-$table-head-bg:               $light !default;
+$table-dark-bg: $gray-500 !default;
+$table-dark-border-color: darken($gray-500, 7.5%) !default;
 
-$table-dark-bg:               $light !default;
-$table-dark-border-color:     $gray-700 !default;
-$table-dark-color:            $body-bg !default;
+// Buttons
+
+// $input-btn-padding-x: 1rem !default;
 
 // Forms
 
-$input-disabled-bg:                 $gray-100 !default;
+$input-disabled-bg: $gray-400 !default;
 
-$input-border-color:                transparent !default;
+$input-border-color: $white !default;
 
-$input-group-addon-color:           $body-color !default;
+$input-group-addon-color: $white !default;
+$input-group-addon-bg: $gray-700 !default;
+$input-group-addon-border-color: transparent !default;
 
-$custom-file-button-color:          $white !default;
-$custom-file-border-color:          $gray-700 !default;
+$custom-file-color: $white !default;
+$custom-file-border-color: $gray-700 !default;
 
 // Dropdowns
 
-$dropdown-bg:                       $gray-700 !default;
-$dropdown-divider-bg:               rgba($black,.15) !default;
+$dropdown-bg: $gray-700 !default;
+$dropdown-divider-bg: $gray-800 !default;
 
-$dropdown-link-color:               $body-color !default;
-$dropdown-link-hover-color:         $dropdown-link-color !default;
-$dropdown-link-hover-bg:            $table-hover-bg !default;
+$dropdown-link-color: $white !default;
+$dropdown-link-hover-color: $white !default;
+$dropdown-link-hover-bg: $primary !default;
 
 // Navs
 
-$nav-link-disabled-color:           rgba(255,255,255,.4) !default;
-
-$nav-tabs-border-color:             $gray-700 !default;
-$nav-tabs-link-active-color:        $body-color !default;
-$nav-tabs-link-active-border-color: $gray-700 !default;
+$nav-tabs-border-color: $table-border-color !default;
+$nav-tabs-link-hover-border-color: $nav-tabs-border-color !default;
+$nav-tabs-link-active-color: $white !default;
+$nav-tabs-link-active-bg: $nav-tabs-border-color !default;
+$nav-tabs-link-active-border-color: $nav-tabs-border-color !default;
 
 // Navbar
 
-// $navbar-padding-y:                  0.25rem !default;
-
-$navbar-dark-color:                 rgba($white,.75) !default;
-$navbar-dark-hover-color:           $white !default;
+$navbar-dark-hover-color: $white !default;
 
 // Pagination
 
-$pagination-color:                  $white !default;
-$pagination-bg:                     $gray-700 !default;
-$pagination-border-color:           transparent !default;
+$pagination-color: $white !default;
+$pagination-bg: $gray-700 !default;
+$pagination-border-color: transparent !default;
 
-$pagination-hover-color:            $white !default;
-$pagination-hover-bg:               $nav-link-disabled-color !default;
-$pagination-hover-border-color:     $pagination-border-color !default;
+$pagination-hover-color: $white !default;
+$pagination-hover-bg: $primary !default;
+$pagination-hover-border-color: $pagination-border-color !default;
 
-$pagination-disabled-color:         $nav-link-disabled-color !default;
-$pagination-disabled-bg:            $pagination-bg !default;
-$pagination-disabled-border-color:  $pagination-border-color !default;
+$pagination-disabled-bg: $pagination-bg !default;
+$pagination-disabled-border-color: $pagination-border-color !default;
+
+// Jumbotron
+
+$jumbotron-bg: $gray-700 !default;
 
 // Cards
 
-$card-cap-bg:                       $table-hover-bg !default;
-$card-bg:                           $gray-700 !default;
-$card-inner-border-radius:          0px !default;
+$card-bg: $gray-700 !default;
+
+// Tooltips
+
+$tooltip-bg: $gray-700 !default;
+$tooltip-opacity: 1 !default;
 
 // Popovers
 
-$popover-bg:                        $gray-700 !default;
-
-$popover-header-bg:                 $table-hover-bg !default;
+$popover-bg: $gray-700 !default;
 
 // Toasts
 
-$toast-background-color:            $gray-700 !default;
-$toast-border-color:                rgba(0,0,0,.2) !default;
+$toast-color: $white !default;
+$toast-background-color: $gray-800 !default;
+$toast-border-color: $gray-700 !default;
 
-$toast-header-color:                $body-color !default;
-$toast-header-background-color:     $toast-background-color !default;
-$toast-header-border-color:         $toast-border-color !default;
+$toast-header-color: $body-color !default;
+$toast-header-background-color: $toast-background-color !default;
+$toast-header-border-color: $toast-border-color !default;
 
 // Modals
 
-$modal-content-bg:                  $gray-700 !default;
+$modal-content-bg: $gray-800 !default;
 
-$modal-header-border-color:         rgba(0,0,0,.2) !default;
+$modal-header-border-color: $gray-700 !default;
+
+// Progress bars
+
+$progress-bg: $gray-700 !default;
 
 // List group
 
-$list-group-bg:                     $gray-700 !default;
-$list-group-border-color:           transparent !default;
+$list-group-bg: $gray-800 !default;
+$list-group-border-color: $gray-700 !default;
 
-$list-group-hover-bg:               $nav-link-disabled-color !default;
+$list-group-hover-bg: $primary !default;
 
-$list-group-disabled-color:         $nav-link-disabled-color !default;
+$list-group-disabled-bg: $gray-700 !default;
 
-$list-group-action-color:           $white !default;
-$list-group-action-hover-color:     $white !default;
+$list-group-action-active-bg: $primary !default;
 
 // Breadcrumbs
 
-$breadcrumb-divider-color:          $body-color !default;
-$breadcrumb-active-color:           $body-color !default;
+$breadcrumb-bg: $gray-700 !default;
+
+// Close
+
+$close-color: $white !default;
+$close-text-shadow: none !default;
 
 // Code
 
-$pre-color:                         inherit !default;
+$pre-color: inherit !default;
 
 // React Bootstrap Table Custom
 
-$react-bs-table-border-color:       $gray-700;
+$react-bs-table-border-color: $gray-700;
+
+// Navbar Color Override
+
+.navbar.bg-dark {
+  background-color: $gray-900 !important;
+}
+
+// AtCoder Problems Color Override
+
+$table-bg-level: 7;
+$table-border-level: 6;
+
+$success-intime-bg-color: #39883f;
+$warning-intime-bg-color: #996f1c;
+$success-before-contest-bg-color: #15518d;
+$success-intime-hover-bg-color: darken($success-intime-bg-color, 5%);
+$warning-intime-hover-bg-color: darken($warning-intime-bg-color, 5%);
+$success-before-contest-hover-bg-color: darken(
+  $success-before-contest-bg-color,
+  5%
+);
 
 @import "common";
