--- a/atcoder-problems-frontend/src/style/_theme-dark.scss
+++ b/atcoder-problems-frontend/src/style/_theme-dark.scss
@@ -259,6 +259,8 @@ $success-before-contest-hover-bg-color: darken(
 $danger-bg-color: #4b0000;
 $danger-hover-bg-color: darken($danger-bg-color, 5%);
 
+$penalties-color: #d61e74;
+
 table.table-bordered,
 table.table-bordered th,
 table.table-bordered td {
