--- a/atcoder-problems-frontend/src/style/_theme-dark.scss
+++ b/atcoder-problems-frontend/src/style/_theme-dark.scss
@@ -198,6 +198,7 @@ $list-group-hover-bg: $primary !default;
 
 $list-group-disabled-bg: $gray-700 !default;
 
+$list-group-action-color: $white !default;
 $list-group-action-active-bg: $primary !default;
 
 // Breadcrumbs
