Simplify design as using single color.

--- a/atcoder-problems-frontend/src/style/_custom.scss
+++ b/atcoder-problems-frontend/src/style/_custom.scss
@@ -208,6 +208,8 @@ span.difficulty-circle {
   bottom: 0.2rem;
   width: 24px;
   height: 6px;
+  border-style: solid;
+  border-width: 1px;
   border-radius: 3px;
 }
 
