--- a/atcoder-problems-frontend/src/style/_custom.scss
+++ b/atcoder-problems-frontend/src/style/_custom.scss
@@ -202,16 +202,35 @@ span.difficulty-circle {
   }
 }
 
+// relative-difficulty-iconic-bar
+//.relative-difficulty-icon {
+//  position: absolute;
+//  left: 0.3rem;
+//  bottom: 0.2rem;
+//  width: 24px;
+//  height: 6px;
+//  border-style: solid;
+//  border-width: 1px;
+//  border-radius: 3px;
+//}
+
+// relative-difficulty-fill-horizontal-bar
 .relative-difficulty-icon {
   position: absolute;
-  left: 0.3rem;
-  bottom: 0.2rem;
-  width: 24px;
-  height: 6px;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 3px;
+  left: 0rem;
+  bottom: 0rem;
+  right: 0rem;
+  height: 3px;
 }
+
+//// relative-difficulty-fill-vertical-bar
+//.relative-difficulty-icon {
+//  position: absolute;
+//  left: 0.0rem;
+//  bottom: 0.0rem;
+//  top: 0.0rem;
+//  width: 6px;
+//}
 
 .list-table tbody tr td,
 .list-table thead th {
