--- a/atcoder-problems-frontend/src/style/_custom.scss
+++ b/atcoder-problems-frontend/src/style/_custom.scss
@@ -343,29 +343,20 @@ $small-score-cell-border: $gray-300 !default;
 }
 
 .topcoder-like-circle {
+  display: block;
   border-radius: 50%;
   border-style: solid;
   border-width: 1px;
-  width: 1rem;
-  height: 1rem;
+  width: 12px;
+  height: 12px;
 }
 
 .topcoder-like-circle-big {
-  border-width: 2px;
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
-.user-name-label {
-  position: relative;
-  padding-left: 1.25rem;
-}
-
-.user-name-label-big {
-  padding-left: 3rem;
+  border-width: 3px;
+  width: 36px;
+  height: 36px;
 }
 
 .rating-circle {
-  position: absolute;
-  left: 0;
+  display: inline-block;
 }
