--- a/atcoder-problems-frontend/src/style/_theme-purple.scss
+++ b/atcoder-problems-frontend/src/style/_theme-purple.scss
@@ -121,15 +121,8 @@ $progress-bar-bg: $primary !default;
 
 // List group
 
-$list-group-bg: $my-purple3 !default;
-$list-group-border-color: $list-group-bg !default;
-
-$list-group-hover-bg: $primary !default;
-
-$list-group-disabled-bg: $gray-700 !default;
-
-$list-group-action-color: $white !default;
-$list-group-action-active-bg: $primary !default;
+$list-group-bg: $my-purple1 !default;
+$list-group-hover-bg: $my-purple2 !default;
 
 // Navbar Color Override
 .navbar.bg-dark {
