improve purple color theme

--- a/atcoder-problems-frontend/src/style/_theme-purple.scss
+++ b/atcoder-problems-frontend/src/style/_theme-purple.scss
@@ -56,21 +56,13 @@ $my-purple2: #e6d7f0 !default;
 $my-purple3: #9469b3 !default;
 
 $primary: $purple !default;
-$secondary: $my-purple3 !default;
+$secondary: #a991d4 !default;
 $success: $my-purple3 !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-200 !default;
 $dark: $gray-900 !default;
-
-$my-purple1: #fbf5ff !default;
-$my-purple2: #e6d7f0 !default;
-$my-purple3: #9469b3 !default;
-
-// Options
-
-// $enable-rounded: false !default;
 
 // Body
 
