fix(frontend): change brown and orange difficulty colors

--- a/atcoder-problems-frontend/src/style/_theme-dark.scss
+++ b/atcoder-problems-frontend/src/style/_theme-dark.scss
@@ -231,12 +231,12 @@ $table-bg-level: 7;
 $table-border-level: -10;
 
 $difficulty-grey-color: #c0c0c0 !default;
-$difficulty-brown-color: #ffa244 !default;
+$difficulty-brown-color: #b08c56 !default;
 $difficulty-green-color: #3faf3f !default;
 $difficulty-cyan-color: #42e0e0 !default;
 $difficulty-blue-color: #8888ff !default;
 $difficulty-yellow-color: #ffff56 !default;
-$difficulty-orange-color: #ffc86f !default;
+$difficulty-orange-color: #ffb836 !default;
 $difficulty-red-color: #ff6767 !default;
 
 $success-bg-color: #005c08;
