improve text color for dark theme

--- a/atcoder-problems-frontend/src/style/_theme-dark.scss
+++ b/atcoder-problems-frontend/src/style/_theme-dark.scss
@@ -270,4 +270,8 @@ table.table-bordered td {
 
 $small-score-cell-border: $white;
 
+.pie-chart-summary text {
+  fill: $gray-400 !important;
+}
+
 @import "common";
